--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
           <!-- Second inner page -->
           <div class="card-page card-page--second" id="page-2"  >
             <div class="page-content">
-              <h2 class="second-page-title">Yay! 💖</h2>
+              <h2 class="second-page-title">Yeeeyyy! 💜</h2>
                <img src="assets/happi cat.gif" alt="">
               <p class="second-page-text">
-                Thank you so much for being my valentine my love.             </p>
+                Thank you for being my valetine my love, for more valentines to come.             </p>
             </div>
           </div>
         </div>
@@ -54,4 +54,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
